--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-// .gitnignore
+
 # next.js build output
 .next
 # dotenv environment variables file (build for Zeit Now)
@@ -10,3 +10,6 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.DS_Store
+.idea
+.idea/*
