--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/reactstrap": "^8.4.2",
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.4.1",
     "next": "^9.3.4",
