--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "@types/reactstrap": "^8.4.2",
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^4.4.1",
     "next": "^9.3.4",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "sass": "^1.26.8"
   },
   "devDependencies": {
     "@types/node": "^13.11.1",
